# quantummind

./: .gitignore  LICENSE  NORTHSTAR.md  README.md  docker-compose.dev.yml  package-lock.json
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_exam_turns_graded.py
backend/app/: main.py
backend/app/agents/: code_agent.py  exam_agent.py  lesson_agent.py  orchestrator.py  rag_agent.py  theory_agent.py
backend/app/core/: cache.py  config.py  exam_state.py  executor.py  grading_backfill.py  llm.py  llm_errors.py  llm_limiter.py  memory.py  prompts.py
backend/app/db/: audit_db.py  database.py  models.py  redis_client.py
backend/app/routes/: chat.py  exam.py  execute.py  lesson.py  stream.py  upload.py
backend/tests/: conftest.py  test_agents_smoke.py  test_executor.py  test_llm_accounting.py  test_llm_provider_switch.py  test_llm_resilience.py  test_llm_seam_isolation.py
backend/tests/integration/: _util.py  conftest.py  test_exam_restart.py  test_grading_degradation.py  test_llm_concurrency.py  test_phase1_units.py  test_two_workers.py
docs/: PHASE0_PLAN.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  RECONCILIATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ChatPanel.jsx  CircuitVisualizer.jsx  CodeEditor.jsx  ConceptCards.jsx  CoursePanel.jsx  CourseSidebar.jsx  Exammode.jsx  GuidedPanel.jsx  LandingPage.jsx  MainApp.jsx  ModeSelector.jsx  (+4 more)
sandbox/: Dockerfile
(+5 files in other folders)
