[project]
name = "quantummind-backend"
version = "0.1.0"
description = "QuantumMind AI backend — FastAPI + LangGraph multi-agent system"
requires-python = ">=3.10,<3.14"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sse-starlette==2.1.3",
    "langchain==0.3.7",
    "langchain-groq==0.2.1",
    "langgraph==0.2.55",
    "langchain-community==0.3.7",
    "chromadb==0.5.18",
    "pypdf==5.1.0",
    "langchain-huggingface==0.1.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "qiskit>=2.3.1",
    "qiskit-aer>=0.17.2",
    "langgraph-checkpoint-sqlite>=2.0.11",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
